# rapier

./: .gitattributes  .gitignore  .typos.toml  ARCHITECTURE.md  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Claude.md  README.md  publish-all.sh  publish-testbeds.sh  publish.sh  run-ci-checks.sh  rustfmt.toml
benchmarks2d/: Cargo.toml  all_benchmarks2.rs  balls2.rs  boxes2.rs  capsules2.rs  convex_polygons2.rs  heightfield2.rs  joint_ball2.rs  joint_fixed2.rs  joint_prismatic2.rs  pyramid2.rs  vertical_stacks2.rs
benchmarks3d/: Cargo.toml  all_benchmarks3.rs  balls3.rs  boxes3.rs  capsules3.rs  ccd3.rs  compound3.rs  convex_polyhedron3.rs  harness_capsules3.rs  heightfield3.rs  joint_ball3.rs  joint_fixed3.rs  joint_prismatic3.rs  joint_revolute3.rs  keva3.rs  many_kinematics3.rs  many_pyramids3.rs  many_sleep3.rs  many_static3.rs  pyramid3.rs  ray_cast3.rs  stacks3.rs  trimesh3.rs
crates/mjcf-rs/: Cargo.toml  README.md
crates/mjcf-rs/src/: assets.rs  body.rs  compiler.rs  contact.rs  equality.rs  error.rs  extras.rs  lib.rs  model.rs  msh.rs  normals.rs  pose.rs  tendon.rs  types.rs
crates/rapier-urdf/: Cargo.toml
crates/rapier-urdf/src/: lib.rs
crates/rapier2d/: Cargo.toml
crates/rapier2d-f64/: Cargo.toml
crates/rapier3d/: Cargo.toml
crates/rapier3d-f64/: Cargo.toml
crates/rapier3d-meshloader/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/rapier3d-meshloader/src/: lib.rs
crates/rapier3d-mjcf/: Cargo.toml  README.md
crates/rapier3d-mjcf/docs/: 01-overview.md  02-coverage-and-mapping.md  03-mjcf-rs-design.md  04-out-of-scope.md  README.md  phase-1-core-kinematics.md  phase-2-defaults-and-meshes.md  phase-3-contact-filtering-and-equality.md  phase-4-springs-dampers-armature.md  phase-5-actuators-sensors-keyframes.md
crates/rapier3d-mjcf/src/: hooks.rs  lib.rs
crates/rapier3d-mjcf/tests/: actuator_gain.rs  cassie_smoke.rs  equality_joint.rs  example_smoke.rs  fixed_tendon.rs  keyframe_controls.rs  keyframe_qpos.rs  loader_regressions.rs  material_defaults.rs  phase1.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  shadow_hand_keyframes.rs
crates/rapier3d-stl/: CHANGELOG.md  Cargo.toml  README.md
crates/rapier3d-stl/src/: lib.rs
crates/rapier3d-urdf/: CHANGELOG.md  Cargo.toml  README.md
crates/rapier3d-urdf/src/: lib.rs
crates/rapier3d/tests/: loop_closure_com_repro.rs  multibody_armature.rs  multibody_coupling.rs  multibody_dof_inertia.rs  multibody_spring.rs
crates/rapier_testbed2d/: Cargo.toml
crates/rapier_testbed2d-f64/: Cargo.toml
crates/rapier_testbed3d/: Cargo.toml
crates/rapier_testbed3d-f64/: Cargo.toml
examples2d/: Cargo.toml  add_remove2.rs  all_examples2.rs  balls2.rs  boxes2.rs  capsules2.rs  ccd2.rs  character_controller2.rs  collision_groups2.rs  convex_polygons2.rs  damping2.rs  debug_box_ball2.rs  debug_compression2.rs  debug_infinite_fall.rs  debug_intersection2.rs  debug_total_overlap2.rs  debug_vertical_column2.rs  drum2.rs  groove_joint2.rs  heightfield2.rs  inv_pyramid2.rs  inverse_kinematics2.rs  joint_motor_position2.rs  joints2.rs  kinematic2.rs  locked_rotation2.rs  locked_rotations2.rs  multi_pendulum.rs  multi_pendulum2.rs  one_way_platforms2.rs  pin_slot_joint2.rs  platform2.rs  polyline2.rs  pyramid2.rs  restitution2.rs  rope_joints2.rs  s2d_arch.rs  s2d_ball_and_chain.rs  s2d_bridge.rs  s2d_card_house.rs  (+15 more)
examples2d/stress_tests/: balls2.rs  boxes2.rs  capsules2.rs  convex_polygons2.rs  heightfield2.rs  joint_ball2.rs  joint_fixed2.rs  joint_prismatic2.rs  mod.rs  pyramid2.rs  vertical_stacks2.rs
examples2d/utils/: character.rs  mod.rs  svg.rs
examples3d/: Cargo.toml  add_remove3.rs  all_examples3.rs  all_examples3_wasm.rs  articulations3.rs  balls3.rs  boxes3.rs  capsules3.rs  ccd3.rs  character_controller3.rs  collision_groups3.rs  compound3.rs  convex_decomposition3.rs  convex_polyhedron3.rs  damping3.rs  debug_add_remove_collider3.rs  debug_articulations3.rs  debug_balls3.rs  debug_big_colliders3.rs  debug_boxes3.rs  debug_chain_high_mass_ratio3.rs  debug_cube_high_mass_ratio3.rs  debug_cylinder3.rs  debug_deserialize3.rs  debug_disabled3.rs  debug_dynamic_collider_add3.rs  debug_eccentric_boxes3.rs  debug_friction3.rs  debug_halfspace3.rs  debug_infinite_fall3.rs  debug_internal_edges3.rs  debug_long_chain3.rs  debug_multibody_ang_motor_pos3.rs  debug_pop3.rs  debug_prismatic3.rs  debug_rollback3.rs  debug_serialized3.rs  debug_shape_modification3.rs  debug_sleeping_kinematic3.rs  debug_thin_cube_on_mesh3.rs  (+41 more)
examples3d-f64/: Cargo.toml  all_examples3-f64.rs  debug_serialized3.rs  trimesh3_f64.rs
examples3d/stress_tests/: balls3.rs  boxes3.rs  capsules3.rs  ccd3.rs  compound3.rs  convex_polyhedron3.rs  heightfield3.rs  joint_ball3.rs  joint_fixed3.rs  joint_prismatic3.rs  joint_revolute3.rs  keva3.rs  many_kinematics3.rs  many_pyramids3.rs  many_sleep3.rs  many_static3.rs  mod.rs  pyramid3.rs  ray_cast3.rs  stacks3.rs  trimesh3.rs
examples3d/utils/: character.rs  mod.rs
python/rapier-py-2d-f64/: Cargo.toml  README.md  pyproject.toml
python/rapier-py-2d-f64/src/: lib.rs
python/rapier-py-3d/: Cargo.toml  README.md  build.rs  pyproject.toml
python/rapier-py-3d-f64/: Cargo.toml  README.md  pyproject.toml
python/rapier-py-3d-f64/src/: lib.rs
python/rapier-py-core/: Cargo.toml
python/rapier-testbed/: README.md  pyproject.toml
typescript/: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  publish_all_canary.sh  publish_all_prod.sh
typescript/.github/: FUNDING.yml
typescript/rapier-compat/: README.md  build-rust.sh  fix_raw_file.sh  gen_src.sh  package-lock.json  package.json  rollup.config.js  tsconfig.common.json  tsconfig.json  tsconfig.pkg2d.json  tsconfig.pkg3d.json
typescript/src/: lib.rs  math.rs  utils.rs
typescript/src.ts/: coarena.ts  exports.ts  init.ts  math.ts  rapier.ts  raw.ts
typescript/testbed2d/: .npmignore  package-lock.json  package.json  publish.sh  webpack.config.js
typescript/testbed3d/: package-lock.json  package.json  publish.sh  tsconfig.json
(+1179 files in other folders)
