[workspace]
members = [
    "crates/rapier2d",
    "crates/rapier2d-f64",
    "crates/rapier_testbed2d",
    "crates/rapier_testbed2d-f64",
    "examples2d",
    "crates/rapier3d",
    "crates/rapier3d-f64",
    "crates/rapier_testbed3d",
    "crates/rapier_testbed3d-f64",
    "examples3d",
    "examples3d-f64",
    "crates/rapier3d-urdf",
    "crates/rapier3d-meshloader",
    "crates/mjcf-rs",
    "crates/rapier3d-mjcf",
    "python/rapier-py-core",
    "python/rapier-py-2d",
    "python/rapier-py-2d-f64",
    "python/rapier-py-3d",
    "python/rapier-py-3d-f64",
]
# Bare `cargo build` / `cargo test` / `cargo clippy` only touches the
# pure-Rust crates. The Python-binding crates need a Python build env
# (pyo3 `extension-module`) and are exercised by the dedicated
# `.github/workflows/python-bindings.yml` workflow via explicit
# `-p rapier-py-*` invocations.
default-members = [
    "crates/rapier2d",
    "crates/rapier2d-f64",
    "crates/rapier_testbed2d",
    "crates/rapier_testbed2d-f64",
    "examples2d",
    "crates/rapier3d",
    "crates/rapier3d-f64",
    "crates/rapier_testbed3d",
    "crates/rapier_testbed3d-f64",
    "examples3d",
    "examples3d-f64",
    "crates/rapier3d-urdf",
    "crates/rapier3d-meshloader",
    "crates/mjcf-rs",
    "crates/rapier3d-mjcf",
]
resolver = "2"

[workspace.package]
version = "0.33.0"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
homepage = "https://rapier.rs"
repository = "https://github.com/dimforge/rapier"
categories = [
    "science",
    "game-development",
    "mathematics",
    "simulation",
    "wasm",
]
license = "Apache-2.0"
rust-version = "1.86"
edition = "2024"

[workspace.lints.clippy]
needless_lifetimes = "allow"

[workspace.dependencies]
# Core math
nalgebra = { version = "0.35", default-features = false, features = ["macros"] }
glamx = { version = "0.3", default-features = false }
simba = { version = "0.10", default-features = false }
num-traits = { version = "0.2", default-features = false }
approx = { version = "0.5", default-features = false }

# Parry (each crate picks its own variant)
parry2d = { version = "0.28", default-features = false, features = ["required-features"] }
parry3d = { version = "0.28", default-features = false, features = ["required-features"] }
parry2d-f64 = { version = "0.28", default-features = false, features = ["required-features"] }
parry3d-f64 = { version = "0.28", default-features = false, features = ["required-features"] }

# Utilities
bitflags = "2"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
thiserror = { version = "2", default-features = false }
profiling = "1.0"
static_assertions = "1"
wide = { version = "1", default-features = false }

# Optional (optional = true must be set per-crate, not here)
web-time = "1.1"
rayon = "1"
serde = { version = "1", default-features = false, features = ["derive"] }

# Dev
bincode = "1"
serde_json = "1"
oorandom = { version = "11", default-features = false }

[patch.crates-io]
#wrapped2d = { git = "https://github.com/Bastacyclop/rust_box2d.git" }
#xurdf = { path = "../xurdf/xurdf" }

#simba = { path = "../simba" }
#kiss3d = { path = "../kiss3d" }
#parry2d = { path = "../parry/crates/parry2d" }
#parry3d = { path = "../parry/crates/parry3d" }
#parry2d-f64 = { path = "../parry/crates/parry2d-f64" }
#parry3d-f64 = { path = "../parry/crates/parry3d-f64" }
#nalgebra = { path = "../nalgebra" }
#simba = { path = "../simba" }
#wide = { path = "../wide" }
#glamx = { path = "../glamx" }

#kiss3d = { git = "https://github.com/sebcrozet/kiss3d", branch = "render-2d" }
#nalgebra = { git = "https://github.com/dimforge/nalgebra", branch = "dev" }
#parry2d = { git = "https://github.com/dimforge/parry", branch = "master" }
#parry3d = { git = "https://github.com/dimforge/parry", branch = "master" }
#parry2d-f64 = { git = "https://github.com/dimforge/parry", branch = "master" }
#parry3d-f64 = { git = "https://github.com/dimforge/parry", branch = "master" }

# See https://github.com/EmbarkStudios/puffin/pull/234
puffin_egui = { git = "https://github.com/tedsteen/puffin.git", rev = "11771ebe00fd257aedbb545df3339ad597b1cc34" }


# # For feature unstable-puffin-pr-235
# # See https://github.com/dimforge/rapier/issues/760.
# puffin_egui = { version = "0.29", optional = true, git = "https://github.com/Vrixyz/puffin.git", branch = "expose_ui_options" }
# puffin = { version = "0.19", optional = true, git = "https://github.com/Vrixyz/puffin.git", branch = "expose_ui_options" }


[profile.release]
#debug = true
#codegen-units = 1
#lto = true

[profile.dev]
opt-level = 1


#[profile.dev.package.rapier3d]
#opt-level = 3
#
#[profile.dev.package.kiss3d]
#opt-level = 3
