[package]
name = "rapier-benchmarks-2d"
version = "0.1.0"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
edition = "2024"

[features]
parallel = ["rapier2d/parallel", "rapier_testbed2d/parallel"]
simd-stable = ["rapier2d/simd-stable"]
simd-nightly = ["rapier2d/simd-nightly"]
other-backends = ["rapier_testbed2d/other-backends"]
enhanced-determinism = ["rapier2d/enhanced-determinism"]

[dependencies]
rand = "0.9"
Inflector = "0.11"

[dependencies.rapier_testbed2d]
path = "../crates/rapier_testbed2d"

[dependencies.rapier2d]
path = "../crates/rapier2d"

[[bin]]
name = "all_benchmarks2"
path = "./all_benchmarks2.rs"