[package]
name = "rapier-benchmarks-3d"
version = "0.1.0"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
edition = "2024"

[features]
parallel = ["rapier3d/parallel", "rapier_testbed3d/parallel"]
simd-stable = ["rapier3d/simd-stable"]
simd-nightly = ["rapier3d/simd-nightly"]
other-backends = ["rapier_testbed3d/other-backends"]
enhanced-determinism = ["rapier3d/enhanced-determinism"]

[dependencies]
rand = "0.9"
Inflector = "0.11"
oorandom = "11"

[dependencies.rapier_testbed3d]
path = "../crates/rapier_testbed3d"

[dependencies.rapier3d]
path = "../crates/rapier3d"

[[bin]]
name = "all_benchmarks3"
path = "all_benchmarks3.rs"
