[package]
name = "rapier-examples-2d"
version = "0.1.0"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
edition = "2024"
default-run = "all_examples2"

[features]
parallel = ["rapier2d/parallel", "rapier_testbed2d/parallel"]
simd-stable = ["rapier2d/simd-stable"]
simd-nightly = ["rapier2d/simd-nightly"]
other-backends = ["rapier_testbed2d/other-backends"]
enhanced-determinism = ["rapier2d/enhanced-determinism"]

[dependencies]
rand = "0.9"
lyon = "0.17"
usvg = "0.14"
dot_vox = "5"

[dependencies.rapier_testbed2d]
path = "../crates/rapier_testbed2d"
features = ["profiler_ui"]

[dependencies.rapier2d]
path = "../crates/rapier2d"

[[bin]]
name = "all_examples2"
path = "./all_examples2.rs"
