[package]
name = "rapier-examples-2d"
version.workspace = true
authors.workspace = true
edition.workspace = true
default-run = "all_examples2"
publish = false

[features]
parallel = ["rapier2d/parallel", "rapier_testbed2d/parallel"]
simd-stable = ["rapier2d/simd-stable"]
simd-nightly = ["rapier2d/simd-nightly"]
enhanced-determinism = ["rapier2d/enhanced-determinism"]

[dependencies]
anyhow.workspace = true
rand.workspace = true
lyon.workspace = true
dot_vox.workspace = true
kiss3d.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
usvg.workspace = true

[dependencies.rapier_testbed2d]
workspace = true
#features = ["profiler_ui"]

[dependencies.rapier2d]
workspace = true

[[bin]]
name = "all_examples2"
path = "./all_examples2.rs"
