[package]
name = "rapier-examples-3d-f64"
version = "0.1.0"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
edition = "2024"
default-run = "all_examples3-f64"

[features]
parallel = ["rapier3d-f64/parallel", "rapier_testbed3d-f64/parallel"]
simd-stable = ["rapier3d-f64/simd-stable"]
simd-nightly = ["rapier3d-f64/simd-nightly"]
enhanced-determinism = ["rapier3d-f64/enhanced-determinism"]

[dependencies]
rand = "0.9"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
obj-rs = { version = "0.7", default-features = false }
bincode = "1"
serde = "1"

[dependencies.rapier_testbed3d-f64]
path = "../crates/rapier_testbed3d-f64"

[dependencies.rapier3d-f64]
path = "../crates/rapier3d-f64"

[[bin]]
name = "all_examples3-f64"
path = "./all_examples3-f64.rs"

#[lib]
#crate-type = ["cdylib", "rlib"]
#path = "./all_examples3_wasm.rs"

