[package]
name = "rapier-examples-3d"
version = "0.1.0"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
edition = "2021"
default-run = "all_examples3"

[features]
parallel = ["rapier3d/parallel", "rapier_testbed3d/parallel"]
simd-stable = ["rapier3d/simd-stable"]
simd-nightly = ["rapier3d/simd-nightly"]
other-backends = ["rapier_testbed3d/other-backends"]
enhanced-determinism = ["rapier3d/enhanced-determinism"]

[dependencies]
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
Inflector = "0.11"
wasm-bindgen = "0.2"
obj-rs = { version = "0.7", default-features = false }
serde = "1"
bincode = "1"

[dependencies.rapier_testbed3d]
path = "../crates/rapier_testbed3d"
features = ["profiler_ui"]

[dependencies.rapier3d]
path = "../crates/rapier3d"

[dependencies.rapier3d-urdf]
path = "../crates/rapier3d-urdf"
features = ["stl"]

[[bin]]
name = "all_examples3"
path = "./all_examples3.rs"

[[bin]]
name = "harness_capsules3"
path = "./harness_capsules3.rs"

#[lib]
#crate-type = ["cdylib", "rlib"]
#path = "./all_examples3_wasm.rs"
