[workspace]
members = ["builds/*"]
resolver = "2"

[profile.release]
debug = false
codegen-units = 1
#lto = true
strip = true # Workaround for https://github.com/bevyengine/bevy/issues/16030 (the bug only happens in 2D)

[patch.crates-io]
# Build the JS/Wasm bindings against the rapier crates in this repository rather
# than the versions published on crates.io, so the bindings always stay in sync
# with the engine they ship alongside. The build crates' `rapier{2,3}d`
# dependency requirement (see builds/prepare_builds/templates/Cargo.toml.tera)
# must stay semver-compatible with the in-repo crate version for this to apply.
rapier2d = { path = "../crates/rapier2d" }
rapier3d = { path = "../crates/rapier3d" }

# parry, nalgebra and simba are still pulled from crates.io, matching the
# versions the in-repo rapier crates depend on. Uncomment to build against local
# checkouts placed next to this repository during development.
#parry2d = { path = "../../parry/crates/parry2d" }
#parry3d = { path = "../../parry/crates/parry3d" }
#nalgebra = { path = "../../nalgebra" }
#simba = { path = "../../simba" }
