[package]
name = "mjcf-rs"
version = "0.1.0"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Pure-Rust parser for the MuJoCo MJCF XML format."
documentation = "https://docs.rs/mjcf-rs"
homepage = "https://rapier.rs"
repository = "https://github.com/dimforge/rapier"
readme = "README.md"
categories = [
    "parser-implementations",
    "science",
    "simulation",
]
keywords = ["mjcf", "mujoco", "robotics", "parser", "xml"]
license = "Apache-2.0"
edition = "2024"

[features]
default = []
## Enable parsing MuJoCo's custom binary `.msh` mesh format.
msh = ["dep:byteorder"]

[dependencies]
roxmltree = "0.20"
thiserror = "2"
log = "0.4"
byteorder = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
