[package]
name = "rapier2d-f64"
version = "0.32.0"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "2-dimensional physics engine in Rust."
documentation = "https://docs.rs/rapier2d"
homepage = "https://rapier.rs"
repository = "https://github.com/dimforge/rapier"
readme = "README.md"
categories = [
    "science",
    "game-development",
    "mathematics",
    "simulation",
    "wasm",
]
keywords = ["physics", "dynamics", "rigid", "real-time", "impulse_joints"]
license = "Apache-2.0"
rust-version = "1.86"
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3", "f32", "std", "simd-is-enabled", "simd-stable", "simd-nightly"))',
] }

[features]
default = ["dim2", "f64", "std"]
dim2 = []
f64 = []
std = [
    "parry2d-f64/std",
    "nalgebra/std",
    "simba/std",
    "num-traits/std",
    "approx/std",
    "thiserror/std",
    "serde?/std",
]
parallel = ["dep:rayon", "std"]
# SoA SIMD not supported yet on f64
#simd-stable = ["simba/wide", "simd-is-enabled"]
#simd-nightly = ["simba/portable_simd", "simd-is-enabled"]
## Do not enable this feature directly. It is automatically
## enabled with the "simd-stable" or "simd-nightly" feature.
#simd-is-enabled = []
serde-serialize = [
    "nalgebra/serde-serialize",
    "parry2d-f64/serde-serialize",
    "dep:serde",
    "std",
]
enhanced-determinism = ["simba/libm_force", "parry2d-f64/enhanced-determinism"]
debug-render = []
profiler = ["dep:web-time"] # Enables the internal profiler.

# Feature used for debugging only.
debug-disable-legitimate-fe-exceptions = []

# Feature used for development and debugging only.
# Do not enable this unless you are working on the engine internals.
dev-remove-slow-accessors = []

[package.metadata.docs.rs]
features = ["parallel", "simd-stable", "serde-serialize", "debug-render"]

[lib]
name = "rapier2d_f64"
path = "../../src/lib.rs"
required-features = ["dim2", "f64"]
doctest = false # All doctests are written assuming the 3D version.

[dependencies]
web-time = { version = "1.1", optional = true }
num-traits = { version = "0.2", default-features = false }
nalgebra = { version = "0.34", default-features = false, features = ["macros", "alloc"] }
glamx = { version = "0.1", default-features = false, features = ["nalgebra"] }
parry2d-f64 = { version = "0.26.0", default-features = false, features = ["required-features", "alloc"] }
simba = { version = "0.9.1", default-features = false }
approx = { version = "0.5", default-features = false }
rayon = { version = "1", optional = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
bitflags = "2"
log = "0.4"
thiserror = { version = "2", default-features = false }
profiling = "1.0"
static_assertions = "1"

[dev-dependencies]
bincode = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
oorandom = { version = "11", default-features = false }
