[package]
name    = "rapier2d"
version = "0.17.2"
authors = [ "Sébastien Crozet <developer@crozet.re>" ]
description = "2-dimensional physics engine in Rust."
documentation = "https://docs.rs/rapier2d"
homepage = "https://rapier.rs"
repository = "https://github.com/dimforge/rapier"
readme = "README.md"
categories = [ "science", "game-development", "mathematics", "simulation", "wasm"]
keywords = [ "physics", "dynamics", "rigid", "real-time", "impulse_joints" ]
license = "Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = [ "dim2", "f32" ]
dim2    = [ ]
f32     = [ ]
parallel = [ "rayon" ]
simd-stable = [ "simba/wide", "simd-is-enabled" ]
simd-nightly = [ "simba/packed_simd", "simd-is-enabled" ]
# Do not enable this feature directly. It is automatically
# enabled with the "simd-stable" or "simd-nightly" feature.
simd-is-enabled = [ "vec_map" ]
wasm-bindgen = [ "instant/wasm-bindgen" ]
serde-serialize = [ "nalgebra/serde-serialize", "parry2d/serde-serialize", "serde", "bit-vec/serde", "arrayvec/serde" ]
enhanced-determinism = [ "simba/libm_force", "parry2d/enhanced-determinism" ]
debug-render = [ ]
profiler = [ "instant" ] # Enables the internal profiler.

# Feature used for debugging only.
debug-disable-legitimate-fe-exceptions = [ ]

# Feature used for development and debugging only.
# Do not enable this unless you are working on the engine internals.
dev-remove-slow-accessors = []

[package.metadata.docs.rs]
features = ["parallel", "simd-stable", "serde-serialize", "debug-render"]

[lib]
name = "rapier2d"
path = "../../src/lib.rs"
required-features = [ "dim2", "f32" ]


[dependencies]
vec_map = { version = "0.8", optional = true }
instant = { version = "0.1", features = [ "now" ], optional = true }
num-traits = "0.2"
nalgebra = "0.32"
parry2d = "0.13.1"
simba = "0.8"
approx = "0.5"
rayon = { version = "1", optional = true }
crossbeam = "0.8"
arrayvec = "0.7"
bit-vec = "0.6"
rustc-hash = "1"
serde = { version = "1", features = [ "derive" ], optional = true }
downcast-rs = "1.2"
num-derive = "0.4"
bitflags = "1"

[dev-dependencies]
bincode = "1"
serde = { version = "1", features = [ "derive" ] }
