[package]
name = "rapier3d-f64"
version.workspace = true
authors.workspace = true
description = "3-dimensional physics engine in Rust."
documentation = "https://docs.rs/rapier3d"
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
categories.workspace = true
keywords = ["physics", "dynamics", "rigid", "real-time", "impulse_joints"]
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[lints]
clippy = { needless_lifetimes = "allow" }
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2", "f32", "std", "alloc", "bytemuck", "simd-is-enabled", "simd-stable", "simd-nightly"))',
    'cfg(target_arch, values("spirv"))',
] }

[features]
default = ["dim3", "f64", "std"]
dim3 = []
f64 = []
alloc = [
    "nalgebra/alloc",
    "parry3d-f64/alloc",
    "serde?/alloc",
]
std = [
    "alloc",
    "parry3d-f64/std",
    "nalgebra/std",
    "simba/std",
    "num-traits/std",
    "approx/std",
    "thiserror/std",
    "serde?/std",
]
parallel = ["dep:rayon", "std"]
# SoA SIMD not supported yet on f64
#simd-stable = ["parry3d-f64/simd-stable", "simba/wide", "simd-is-enabled"]
#simd-nightly = [
#    "parry3d-f64/simd-nightly",
#    "simba/portable_simd",
#    "simd-is-enabled",
#]
## Do not enable this feature directly. It is automatically
## enabled with the "simd-stable" or "simd-nightly" feature.
#simd-is-enabled = []
serde-serialize = [
    "nalgebra/serde-serialize",
    "parry3d-f64/serde-serialize",
    "dep:serde",
    "std",
]
enhanced-determinism = ["simba/libm_force", "parry3d-f64/enhanced-determinism"]
debug-render = []
profiler = ["dep:web-time"] # Enables the internal profiler.
bytemuck = ["dep:bytemuck"]

# Feature used for debugging only.
debug-disable-legitimate-fe-exceptions = []

# Feature used for development and debugging only.
# Do not enable this unless you are working on the engine internals.
dev-remove-slow-accessors = []

[package.metadata.docs.rs]
features = ["parallel", "simd-stable", "serde-serialize", "debug-render"]

[lib]
name = "rapier3d_f64"
path = "../../src/lib.rs"
required-features = ["dim3", "f64"]
doctest = false # All doctests are written assuming the 3D f32 version.

[dependencies]
glamx.workspace = true
parry3d-f64.workspace = true
simba.workspace = true
num-traits.workspace = true
approx.workspace = true
bitflags.workspace = true
log.workspace = true
thiserror.workspace = true
profiling.workspace = true
static_assertions.workspace = true
web-time = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

# Nalgebra is only included on non-spirv targets. On spirv, rapier exposes only the
# subset of its API that doesn't require nalgebra.
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
nalgebra = { workspace = true }
glamx = { workspace = true, features = ["nalgebra"] }

[dev-dependencies]
bincode.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["std"] }
oorandom.workspace = true
