[package]
name = "rapier3d-meshloader"
version.workspace = true
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "STL file loader for the 3D rapier physics engine."
documentation = "https://docs.rs/rapier3d-meshloader"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
categories = [
    "science",
    "game-development",
    "mathematics",
    "simulation",
    "wasm",
]
keywords = ["physics", "joints", "multibody", "robotics", "urdf"]
license.workspace = true
edition.workspace = true

[features]
default = ["stl", "collada", "wavefront"]
stl = ["mesh-loader/stl"]
collada = ["mesh-loader/collada"]
wavefront = ["mesh-loader/obj"]

[dependencies]
thiserror = "2"
profiling = "1.0"
mesh-loader = "0.1.13"

rapier3d = { version = "0.33.0", path = "../rapier3d" }
